# ILThermoPy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  setup.cfg
docs/: conf.py  index.rst  requirements.txt
docs/source/: api.rst  changelog.rst  cookbook.ipynb
ilthermopy/: __init__.py  compound_list.py  compounds.csv  data_structs.py  errors.py  misc.py  requests.py  search.py  updates.py
