[metadata]
name = ILThermoPy
version = attr: ilthermopy.__version__
author = Ivan Chernyshov
author_email = ivan.chernyshoff@gmail.com
description = A simple Python wrapper around the ILThermo 2.0 database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/ilthermopy/
project_urls =
    GitHub = https://github.com/IvanChernyshov/ILThermoPy
    Bug Tracker = https://github.com/IvanChernyshov/ILThermoPy/issues
keywords = ionic liquids ilthermo nist api chemistry cheminformatics
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages =
    ilthermopy
install_requires =
    importlib-resources>=1.1.0; python_version < '3.9'
    requests
    pandas
python_requires = >=3.7

[options.package_data]
* = *.csv
